--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/poppins": "^4.5.1",
+    "formik": "^2.2.9",
     "framer-motion": "^5",
     "next": "12.0.10",
     "react": "17.0.2",
