--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev -p 5050",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest --watch"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
@@ -21,10 +22,13 @@
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.2",
+    "@testing-library/react": "^12.1.2",
     "@types/node": "^17.0.16",
     "@types/react": "^17.0.39",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
+    "jest": "^27.5.1",
     "typescript": "^4.5.5"
   }
 }
